samples/_failures_safe/1761006163_a2dc14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cc3361a.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_1cc3361a.c:141:17: error: expected expression at end of input
  141 |                 result->data[i][j] = (
      |                 ^~~~~~
./samples/SAFE/__tmp_1cc3361a.c:141:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1cc3361a.c:141:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1cc3361a.c:141:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1cc3361a.c:141:17: error: expected declaration or statement at end of input
